[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "invisibl_query"
version = "0.1.0"
description = "Invisbl Query SDK"
requires-python = ">=3.9"

dependencies = [
    "boto3>=1.26.0",
    "boto3-stubs[sts]",
    "sql-metadata>=2.7.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]